crates/aura-core/tests/boundaries/query_effects_raw_query_private.stderr
error[E0599]: no method named `query_raw` found for reference `&H` in the current scope
 --> tests/boundaries/query_effects_raw_query_private.rs:5:21
  |
5 |     let _ = handler.query_raw(program).await;
  |                     ^^^^^^^^^
  |
help: there is a method `query` with a similar name
  |
5 -     let _ = handler.query_raw(program).await;
5 +     let _ = handler.query(program).await;
  |
